@@ -1,3 +1,8 @@
+
+* added
+- in /information_theory/entropy.v
+  + lemma mutual_info_RVE, mutual_info_RV0_indep
+
 -------------------
 from 0.9.2 to 0.9.3
 -------------------
